# prof

./: .gitattributes  README.md
prof-cpp/: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt
prof-cpp/.devcontainer/: Dockerfile  devcontainer.json
prof-cpp/libs/: test-runner.hpp
prof-cpp/src/: main.cpp  prof.cpp  prof.hpp  prof.test.cpp
prof-viewer/: package-lock.json  package.json
prof-viewer/.devcontainer/: Dockerfile  devcontainer.json
prof-viewer/public/: index.html
prof-viewer/src/: App.tsx  index.css
prof-viewer/src/components/App/: App.module.css  App.tsx
prof-viewer/src/components/AutoResizableCanvas/: AutoResizableCanvas.tsx
prof-viewer/src/components/FoamTreeMap/: FoamTreeMap.tsx  buildFoamTreeMapData.ts
prof-viewer/src/components/ProfileInput/: ProfileInput.tsx
prof-viewer/src/components/TreeMap/: TreeMap.module.css  TreeMap.tsx  buildTreeMap.ts  drawTreeMap.test.ts
prof-viewer/src/components/TreeMap/models/: Orientation.ts
prof-viewer/src/components/ViewModeSelector/: ViewModeSelector.tsx
prof-viewer/src/models/: Profile.ts  State.ts  TreeMapData.ts  ViewData.ts
prof-viewer/src/utils/: buildFoamTreeMapData.ts  buildTreeMapData.ts  buildViewData.ts
